# OPG

./: .cursorrules  .env.example  .gitignore  LICENSE  README.md  calculate_audio_duration.sh  convert_parsed_data.py  create-env-example.sh  download-google-ai-studio.js  duplicate_audio_files.json  fix_params.py  package-lock.json  package.json  setup_fs_python.sh  tokenizer_decoded.txt  voice-config.json
backend/: conversation.json  (+8 more)
fs-python/: .gitignore  .project-root  FINE_TUNING_GUIDE.md  FLASH_CLI_USAGE.md  Makefile  README.md  audio_worker.py  cli_tts.py  demo_voices.py  enhanced_flash_attention.py  finetune_tts.py  flash_optimized_cli.py  inference_optimized.py  llama_optimized.py  memory_benchmark.py  memory_monitor.py  memory_profiler.py  optimized_cli.py  optimized_cli_tts.py  optimized_tts.py  prepare_dataset.py  pyproject.toml  quick_memory_analysis.py  quick_optimize_extraction.py  requirements.txt  simple_tts.py  test_whisper_recognition.py
fs-python/fish-speech/: pyproject.toml
fs-python/fish-speech/fish_speech/: tokenizer.py  train.py
fs-python/fish-speech/fish_speech/configs/: base.yaml  text2semantic_finetune.yaml
fs-python/fish-speech/fish_speech/datasets/: semantic.py
fs-python/fish-speech/tools/vqgan/: extract_vq.py
fs-python/tests/: README.md  cleanup.py  conftest.py  expected_texts.json  pytest.ini  report.html  report.json  requirements.txt  test_e2e_training.py  test_report.json
fs-python/tests/data/test_voice/: test_sample.txt
fs-python/voices/: AR_Female_Narrator.npy  AR_Female_Narrator.txt  BY_google_Female_Zephyr.npy  BY_google_Female_Zephyr.txt  DE_Male_Narrator.npy  DE_Male_Narrator.txt  EN_Female2_Narrator.npy  EN_Female2_Narrator.txt  EN_Female_Anime_Girl.npy  EN_Female_Anime_Girl.txt  EN_Female_Fantasy.npy  EN_Female_Fantasy.txt  ES_Male_Narrator.npy  ES_Male_Narrator.txt  FR_Female_Narrator.npy  FR_Female_Narrator.txt  GE_google_Female_Zephyr.npy  GE_google_Female_Zephyr.txt  JA_Male_Narrator.npy  JA_Male_Narrator.txt  KO_Female_Assistant.npy  KO_Female_Assistant.txt  RU_E_Female_Irina.npy  RU_E_Female_Marfa.npy  RU_E_Female_Marina.npy  RU_E_Female_Marina.txt  RU_E_Male_Anton.npy  RU_E_Male_Igor.npy  RU_E_Male_Oleg.npy  RU_Famale_ALEKSANDRA_KARELьSKIKh.npy  RU_Famale_ALEKSANDRA_KARELьSKIKh.txt  RU_Famale_ALEKSANDRA_KOSTINSKAYa.npy  RU_Famale_ALEKSANDRA_KOSTINSKAYa.txt  RU_Famale_ALEKSANDRA_KOZhEVNIKOVA.npy  RU_Famale_ALEKSANDRA_KOZhEVNIKOVA.txt  RU_Famale_ALEKSANDRA_KURAGINA.npy  RU_Famale_ALEKSANDRA_KURAGINA.txt  RU_Famale_ALEKSANDRA_NAZAROVA.npy  RU_Famale_ALEKSANDRA_NAZAROVA.txt  RU_Famale_ALEKSANDRA_OSTROUKhOVA.npy  (+97 more)
(+69 files in other folders)
