[tool.poetry]
name = "fs-python"
version = "0.1.0"
description = ""
authors = ["Viktar Silakou"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
torch = "2.7.0"
torchvision = "0.22.0"
torchaudio = "2.7.0"
soundfile = "^0.12"
librosa = "^0.10.0"
tqdm = "^4.65.0"
numpy = "^1.24.0"
pydub = "^0.25.0"
yt-dlp = "*"

# The git dependency will pull gradio and the required huggingface-hub itself
# fish-speech = { git = "https://github.com/fishaudio/fish-speech.git", branch = "main" }
scipy = "^1.15.3"
openai-whisper = "^20240930"
faster-whisper = ">=1.0.0"
loguru = "^0.7.3"
psutil = "^7.0.0"
datasets = "^3.6.0"
tokenizers = ">=0.21,<0.22"
click = "^8.0.0"
hydra-core = "^1.3.0"
omegaconf = "^2.3.0"
transformers = "^4.30.0"
lightning = "^2.0.0"
einops = "^0.7.0"
vector-quantize-pytorch = "*"
matplotlib = "^3.8.0"
wandb = "^0.17.0"
protobuf = "^4.0.0"
tiktoken = "^0.8.0"

[tool.poetry.group.test.dependencies]
pytest = "^7.0.0"
pytest-xdist = "^2.5.0"
pytest-timeout = "^2.1.0"
pytest-mock = "^3.6.0"
pytest-html = "^3.1.0"
pytest-json-report = "^1.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"